syntax = "proto3";

option csharp_namespace = "Shared.Contracts.Orders";

package orders;

import "google/protobuf/timestamp.proto";

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  
  rpc GetUserOrders(GetUserOrdersRequest) returns (GetUserOrdersResponse);
  
  rpc GetOrderStatus(GetOrderStatusRequest) returns (GetOrderStatusResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}

message CreateOrderResponse {
  bool success = 1;
  string message = 2;
  string order_id = 3;
}

message GetUserOrdersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GetUserOrdersResponse {
  bool success = 1;
  string message = 2;
  repeated Order orders = 3;
  int32 total_count = 4;
}

message GetOrderStatusRequest {
  string order_id = 1;
  string user_id = 2;
}

message GetOrderStatusResponse {
  bool success = 1;
  string message = 2;
  Order order = 3;
}

message Order {
  string order_id = 1;
  string user_id = 2;
  OrderStatus status = 3;
  double total_amount = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  repeated OrderItem items = 7;
  string payment_transaction_id = 8;
}

enum OrderStatus {
  PENDING = 0;
  PAYMENT_PROCESSING = 1;
  PAID = 2;
  PAYMENT_FAILED = 3;
  CANCELLED = 4;
  SHIPPED = 5;
  DELIVERED = 6;
}
